fix overflow

--- a/containers/FireInfoSection/Sections/Tab6/style.module.scss
+++ b/containers/FireInfoSection/Sections/Tab6/style.module.scss
@@ -104,7 +104,8 @@
 
 .copy {
   @include body2;
-  width: $five-twelfths;
+  margin-right: 20px;
+  width: 100%;
   height: auto;
   @media (max-width: 1200px) {
     width: $four-twelfths;
